[gd_scene load_steps=16 format=3 uid="uid://bcnswvaj2uhro"]

[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="1_r4eeu"]
[ext_resource type="Texture2D" uid="uid://cwk0id0opn4hq" path="res://Sprites/King and Pigs/Kings and Pigs.png" id="2_p82u1"]
[ext_resource type="Script" path="res://Scripts/MainMenuDoor.gd" id="3_nbh2u"]
[ext_resource type="Texture2D" uid="uid://ddtrj3fmws5yy" path="res://Sprites/King and Pigs/11-Door/Closiong (46x56).png" id="4_vcif0"]
[ext_resource type="Texture2D" uid="uid://dyn1g3rry8k1i" path="res://Sprites/King and Pigs/11-Door/Idle.png" id="5_0x826"]
[ext_resource type="Texture2D" uid="uid://xu1x1omih7cw" path="res://Sprites/King and Pigs/11-Door/Opening (46x56).png" id="6_rf87t"]

[sub_resource type="AtlasTexture" id="AtlasTexture_v1l5d"]
atlas = ExtResource("4_vcif0")
region = Rect2(0, 0, 46, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1b8r"]
atlas = ExtResource("4_vcif0")
region = Rect2(46, 0, 46, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_5rdha"]
atlas = ExtResource("4_vcif0")
region = Rect2(92, 0, 46, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_rwbxl"]
atlas = ExtResource("6_rf87t")
region = Rect2(0, 0, 46, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_8250f"]
atlas = ExtResource("6_rf87t")
region = Rect2(46, 0, 46, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kve2"]
atlas = ExtResource("6_rf87t")
region = Rect2(92, 0, 46, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_aexfe"]
atlas = ExtResource("6_rf87t")
region = Rect2(138, 0, 46, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_yktpf"]
atlas = ExtResource("6_rf87t")
region = Rect2(184, 0, 46, 56)

[sub_resource type="SpriteFrames" id="SpriteFrames_qvw80"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1l5d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1b8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5rdha")
}, {
"duration": 1.0,
"texture": ExtResource("5_0x826")
}],
"loop": false,
"name": &"Closing",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_0x826")
}],
"loop": false,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rwbxl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8250f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kve2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aexfe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yktpf")
}],
"loop": false,
"name": &"Opening",
"speed": 5.0
}]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_r4eeu")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MenuWelcome" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="KingsAndPigs" type="Sprite2D" parent="CanvasLayer/MenuWelcome"]
top_level = true
texture_filter = 1
position = Vector2(578, 191)
scale = Vector2(8, 8)
texture = ExtResource("2_p82u1")

[node name="Control" type="Control" parent="CanvasLayer/MenuWelcome"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -138.5
offset_top = -335.0
offset_right = 138.5
grow_horizontal = 2
grow_vertical = 0
mouse_default_cursor_shape = 2
script = ExtResource("3_nbh2u")

[node name="Door" type="AnimatedSprite2D" parent="CanvasLayer/MenuWelcome/Control"]
texture_filter = 1
scale = Vector2(6.1087, 6.1087)
sprite_frames = SubResource("SpriteFrames_qvw80")
animation = &"Closing"
speed_scale = 2.0
centered = false

[node name="MenuChooseLevel" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/MenuChooseLevel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = -30.0
columns = 10

[node name="ButtonLVL1" type="Button" parent="CanvasLayer/MenuChooseLevel/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 50
text = "1"

[node name="ButtonLVL2" type="Button" parent="CanvasLayer/MenuChooseLevel/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 50
text = "2"

[node name="ButtonLVL3" type="Button" parent="CanvasLayer/MenuChooseLevel/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 50
text = "3"

[node name="ButtonLVL4" type="Button" parent="CanvasLayer/MenuChooseLevel/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 50
text = "4"

[node name="ButtonLVL5" type="Button" parent="CanvasLayer/MenuChooseLevel/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 50
text = "5"

[node name="Camera2D" type="Camera2D" parent="."]

[connection signal="gui_input" from="CanvasLayer/MenuWelcome/Control" to="." method="_on_control_gui_input"]
[connection signal="mouse_entered" from="CanvasLayer/MenuWelcome/Control" to="CanvasLayer/MenuWelcome/Control" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/MenuWelcome/Control" to="CanvasLayer/MenuWelcome/Control" method="_on_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/MenuChooseLevel/GridContainer/ButtonLVL1" to="." method="_on_button_lvl_pressed" binds= [1]]
[connection signal="pressed" from="CanvasLayer/MenuChooseLevel/GridContainer/ButtonLVL2" to="." method="_on_button_lvl_pressed" binds= [2]]
[connection signal="pressed" from="CanvasLayer/MenuChooseLevel/GridContainer/ButtonLVL3" to="." method="_on_button_lvl_pressed" binds= [3]]
[connection signal="pressed" from="CanvasLayer/MenuChooseLevel/GridContainer/ButtonLVL4" to="." method="_on_button_lvl_pressed" binds= [4]]
[connection signal="pressed" from="CanvasLayer/MenuChooseLevel/GridContainer/ButtonLVL5" to="." method="_on_button_lvl_pressed" binds= [5]]
